feat: Vertaling toegevoegd voor ServerSetupPage en TemplateEditorPage
- ServerSetupPage.tsx volledig vertaald met i18next
- TemplateEditorPage.tsx volledig vertaald met i18next
- Translation keys toegevoegd aan nl.json en en.json
- Alle 38 pagina's zijn nu volledig vertaald

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -557,7 +557,112 @@
     "deleteConfirm": "Are you sure you want to delete this template?",
     "defaultTemplate": "Default template",
     "setAsDefault": "Set as default",
-    "preview": "Preview"
+    "preview": "Preview",
+    "editor": {
+      "title": "Template Editor",
+      "text": "Text",
+      "quantity": "Quantity",
+      "kilometers": "Kilometers",
+      "hours": "Hours",
+      "price": "Price (€)",
+      "vat": "VAT (%)",
+      "percentage": "Percentage",
+      "calculated": "Calculated",
+      "companyName": "Company name",
+      "companyAddress": "Company address",
+      "kvkNumber": "Chamber of Commerce number",
+      "vatNumber": "VAT number",
+      "invoiceNumber": "Invoice number",
+      "invoiceDate": "Invoice date",
+      "dueDate": "Due date",
+      "customerName": "Customer name",
+      "customerAddress": "Customer address",
+      "editField": "Edit Field",
+      "type": "Type",
+      "enterText": "Enter text...",
+      "variable": "Variable",
+      "selectVariable": "Select variable...",
+      "uploadImage": "Upload Image",
+      "uploading": "Uploading...",
+      "uploadFailed": "Upload failed",
+      "clickToUpload": "Click to upload image",
+      "clickToChange": "Click to change",
+      "orDragFile": "or drag a file",
+      "removeImage": "Remove Image",
+      "widthPixels": "Width (pixels)",
+      "heightPixels": "Height (pixels)",
+      "imageSizeNote": "Leave empty for automatic size. Fill only width to maintain aspect ratio.",
+      "styling": "Styling",
+      "font": "Font",
+      "size": "Size",
+      "color": "Color",
+      "alignment": "Alignment",
+      "style": "Style",
+      "bold": "Bold",
+      "italic": "Italic",
+      "deleteField": "Delete Field",
+      "loading": "Loading template...",
+      "saveTemplate": "Save Template",
+      "saving": "Saving...",
+      "templateSaved": "Template saved",
+      "saveError": "Save failed",
+      "loadError": "Load error",
+      "backToTemplates": "Back to templates",
+      "enterTemplateName": "Enter a template name",
+      "templateNamePlaceholder": "E.g.: Standard Invoice",
+      "descriptionPlaceholder": "Optional description...",
+      "headerSection": "1. Header (Top)",
+      "subheaderSection": "2. Subheader (Below Header)",
+      "footerSection": "4. Footer (Bottom)",
+      "header": "Header",
+      "subheader": "Subheader",
+      "footer": "Footer",
+      "leftColumn": "Left",
+      "centerColumn": "Center",
+      "rightColumn": "Right",
+      "clickToAddField": "Click to add field",
+      "empty": "empty",
+      "tableColumns": "Table Columns",
+      "addColumn": "Add Column",
+      "editColumn": "Edit Column",
+      "newColumn": "New Column",
+      "columnId": "Column ID",
+      "columnIdDescription": "Unique ID for calculations",
+      "displayName": "Display name",
+      "columnType": "Column type",
+      "width": "Width (%)",
+      "formula": "Formula",
+      "formulaExample": "Example: quantity * price",
+      "orderTip": "Use the arrows to change the order",
+      "moveUp": "Move up",
+      "moveDown": "Move down",
+      "availableColumns": "Available columns:",
+      "defaultRates": "Default Rates",
+      "hourlyRate": "Hourly rate (€)",
+      "dotPrice": "DOT Price",
+      "isPercentage": "Is percentage",
+      "kmRate": "KM Rate (€)",
+      "totalsConfig": "Totals Configuration",
+      "totals": "Totals",
+      "showSubtotal": "Show subtotal (excl. VAT)",
+      "showVat": "Show VAT amount",
+      "showTotal": "Show total (incl. VAT)",
+      "vatPercentage": "VAT Percentage",
+      "tableStyle": "Table Style",
+      "headerRow": "Header Row",
+      "rows": "Rows",
+      "background": "Background",
+      "textColor": "Text color",
+      "headerBackground": "Header background",
+      "headerTextColor": "Header text color",
+      "headerFont": "Header font",
+      "evenRowBackground": "Even row background",
+      "oddRowBackground": "Odd row background",
+      "rowTextColor": "Row text color",
+      "rowFont": "Row font",
+      "preview": "Preview",
+      "loadingPreview": "Loading preview..."
+    }
   },
   "users": {
     "title": "Users",
@@ -615,7 +720,23 @@
     "defaultLeaveBalance": "Default leave balance",
     "leaveYear": "Leave year",
     "server": "Server",
-    "serverSetup": "Server setup"
+    "serverSetup": "Server setup",
+    "serverConfiguration": "Server Configuration",
+    "enterServerUrl": "Enter the TMS server URL to get started.",
+    "serverUrl": "Server URL",
+    "serverUrlExample": "e.g. https://tms.yourcompany.com",
+    "testConnection": "Test Connection",
+    "testingConnection": "Testing connection...",
+    "connectionSuccess": "Connection successful!",
+    "connectionFailed": "Connection failed",
+    "continueToLogin": "Continue to Login",
+    "urlMustBeHttp": "URL must start with http:// or https://",
+    "localhostNotAllowed": "localhost URLs are not allowed",
+    "publicIpNotAllowed": "Public IP addresses are not allowed",
+    "serverResponseError": "Server responded with status {{status}}",
+    "localDevelopment": "Local Development",
+    "localDevMode": "Use local dev mode (localhost:8000)",
+    "askAdminForUrl": "Ask your administrator for the server URL"
   },
   "notifications": {
     "title": "Notifications",
