--- a/frontend/src/i18n/locales/nl.json
+++ b/frontend/src/i18n/locales/nl.json
@@ -557,7 +557,112 @@
     "deleteConfirm": "Weet u zeker dat u deze template wilt verwijderen?",
     "defaultTemplate": "Standaard template",
     "setAsDefault": "Instellen als standaard",
-    "preview": "Voorbeeld bekijken"
+    "preview": "Voorbeeld bekijken",
+    "editor": {
+      "title": "Template Editor",
+      "text": "Tekst",
+      "quantity": "Aantal",
+      "kilometers": "Kilometers",
+      "hours": "Uren",
+      "price": "Prijs (€)",
+      "vat": "BTW (%)",
+      "percentage": "Percentage",
+      "calculated": "Berekend",
+      "companyName": "Bedrijfsnaam",
+      "companyAddress": "Bedrijfsadres",
+      "kvkNumber": "KVK nummer",
+      "vatNumber": "BTW nummer",
+      "invoiceNumber": "Factuurnummer",
+      "invoiceDate": "Factuurdatum",
+      "dueDate": "Vervaldatum",
+      "customerName": "Klantnaam",
+      "customerAddress": "Klantadres",
+      "editField": "Veld Bewerken",
+      "type": "Type",
+      "enterText": "Voer tekst in...",
+      "variable": "Variabele",
+      "selectVariable": "Selecteer variabele...",
+      "uploadImage": "Afbeelding Uploaden",
+      "uploading": "Uploaden...",
+      "uploadFailed": "Upload mislukt",
+      "clickToUpload": "Klik om afbeelding te uploaden",
+      "clickToChange": "Klik om te wijzigen",
+      "orDragFile": "of sleep een bestand",
+      "removeImage": "Afbeelding Verwijderen",
+      "widthPixels": "Breedte (pixels)",
+      "heightPixels": "Hoogte (pixels)",
+      "imageSizeNote": "Laat leeg voor automatische grootte. Vul alleen breedte in om aspect ratio te behouden.",
+      "styling": "Opmaak",
+      "font": "Lettertype",
+      "size": "Grootte",
+      "color": "Kleur",
+      "alignment": "Uitlijning",
+      "style": "Stijl",
+      "bold": "Vet",
+      "italic": "Cursief",
+      "deleteField": "Veld Verwijderen",
+      "loading": "Template laden...",
+      "saveTemplate": "Template Opslaan",
+      "saving": "Opslaan...",
+      "templateSaved": "Template opgeslagen",
+      "saveError": "Opslaan mislukt",
+      "loadError": "Fout bij laden",
+      "backToTemplates": "Terug naar templates",
+      "enterTemplateName": "Vul een template naam in",
+      "templateNamePlaceholder": "Bijv: Standaard Factuur",
+      "descriptionPlaceholder": "Optionele beschrijving...",
+      "headerSection": "1. Header (Bovenkant)",
+      "subheaderSection": "2. Subheader (Onder Header)",
+      "footerSection": "4. Footer (Onderkant)",
+      "header": "Header",
+      "subheader": "Subheader",
+      "footer": "Footer",
+      "leftColumn": "Links",
+      "centerColumn": "Midden",
+      "rightColumn": "Rechts",
+      "clickToAddField": "Klik om veld toe te voegen",
+      "empty": "leeg",
+      "tableColumns": "Tabel Kolommen",
+      "addColumn": "Kolom Toevoegen",
+      "editColumn": "Kolom Bewerken",
+      "newColumn": "Nieuwe Kolom",
+      "columnId": "Kolom ID",
+      "columnIdDescription": "Unieke ID voor berekeningen",
+      "displayName": "Weergavenaam",
+      "columnType": "Kolom type",
+      "width": "Breedte (%)",
+      "formula": "Formule",
+      "formulaExample": "Voorbeeld: aantal * prijs",
+      "orderTip": "Gebruik de pijltjes om de volgorde te wijzigen",
+      "moveUp": "Naar boven",
+      "moveDown": "Naar beneden",
+      "availableColumns": "Beschikbare kolommen:",
+      "defaultRates": "Standaard Tarieven",
+      "hourlyRate": "Uurtarief (€)",
+      "dotPrice": "DOT Prijs",
+      "isPercentage": "Is percentage",
+      "kmRate": "KM Tarief (€)",
+      "totalsConfig": "Totalen Configuratie",
+      "totals": "Totalen",
+      "showSubtotal": "Subtotaal (excl. BTW) tonen",
+      "showVat": "BTW bedrag tonen",
+      "showTotal": "Totaal (incl. BTW) tonen",
+      "vatPercentage": "BTW Percentage",
+      "tableStyle": "Tabel Opmaak",
+      "headerRow": "Koptekst",
+      "rows": "Rijen",
+      "background": "Achtergrond",
+      "textColor": "Tekstkleur",
+      "headerBackground": "Header achtergrond",
+      "headerTextColor": "Header tekstkleur",
+      "headerFont": "Header lettertype",
+      "evenRowBackground": "Even rij achtergrond",
+      "oddRowBackground": "Oneven rij achtergrond",
+      "rowTextColor": "Rij tekstkleur",
+      "rowFont": "Rij lettertype",
+      "preview": "Voorbeeld",
+      "loadingPreview": "Laad preview..."
+    }
   },
   "users": {
     "title": "Gebruikers",
@@ -615,7 +720,23 @@
     "defaultLeaveBalance": "Standaard verlofsaldo",
     "leaveYear": "Verlofjaar",
     "server": "Server",
-    "serverSetup": "Server instellen"
+    "serverSetup": "Server instellen",
+    "serverConfiguration": "Server Configuratie",
+    "enterServerUrl": "Voer de URL van de TMS server in om te beginnen.",
+    "serverUrl": "Server URL",
+    "serverUrlExample": "bijv. https://tms.uwbedrijf.nl",
+    "testConnection": "Test Verbinding",
+    "testingConnection": "Verbinding testen...",
+    "connectionSuccess": "Verbinding succesvol!",
+    "connectionFailed": "Verbinding mislukt",
+    "continueToLogin": "Doorgaan naar Login",
+    "urlMustBeHttp": "URL moet beginnen met http:// of https://",
+    "localhostNotAllowed": "localhost URLs zijn niet toegestaan",
+    "publicIpNotAllowed": "Publieke IP-adressen zijn niet toegestaan",
+    "serverResponseError": "Server antwoordde met status {{status}}",
+    "localDevelopment": "Lokale Ontwikkeling",
+    "localDevMode": "Lokale dev-modus gebruiken (localhost:8000)",
+    "askAdminForUrl": "Vraag je administrator om de server URL"
   },
   "notifications": {
     "title": "Notificaties",
